fix postform message label vertical-align

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -135,6 +135,10 @@ div.postform-group label {
   height: 23px;
 }
 
+div.postform-group label.postform-message-label {
+  vertical-align: top;
+}
+
 /* menubar */
 div.menubar div.boardlist {
   float: left;
